fixed mobile responsiveness text overflow issue

--- a/CSS/style.css
+++ b/CSS/style.css
@@ -145,7 +145,7 @@ a:hover {
 	margin: 1rem;
 }
 .card {
-	max-width: 1100px;
+	max-width: 100%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -213,7 +213,9 @@ a:hover {
 	.navigation_bar-right {
 		display: none;
 		flex-direction: column;
-		width: 100%;
+
+		width: 100vw;
+		/* flex-wrap: wrap; */
 	}
 	#hamburger {
 		display: block;
@@ -229,6 +231,9 @@ a:hover {
 		background-color: var(--color-prim);
 		justify-content: center;
 		align-items: center;
+		max-width: 100%;
+		/* flex-wrap: wrap; */
+		height: 100%;
 	}
 
 	#faeb8569-86d6-4ca8-aa1a-15c8989ac122 {
@@ -237,13 +242,17 @@ a:hover {
 
 	.container {
 		display: flex;
+		width: 100%;
 		flex-direction: column;
 	}
+
 	.card-p {
 		border-bottom: 1px solid var(--color-cta);
+		/* width: 100%; */
 	}
 	.philosophy {
 		display: flex;
+		height: 100%;
 		flex-direction: column;
 	}
 
